[Edit] deviseのパスワードリセット機能を本番環境で編集

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -14,7 +14,10 @@ ja:
         nickname: ユーザーニックネーム
         email: メールアドレス
         password: パスワード
-        
+
   devise:
+    passwords:
+      user:
+        updated: "変更しました"
     sessions:
       signed_in: "Signed in successfully."
